[package]
name = "jito-searcher-cli"
version = "0.1.0"
rust-version = "1.80.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5.14"
env_logger = "0.11"
futures-util = "0.3.31"
histogram = "0.11.2"
jito-protos = { path = "../jito_protos" }
log = "0.4.25"
prost-types = "0.13"
rand = "0.9.0"
jito-searcher-client = { path = "../searcher_client" }
solana-client = "2.1.13"
solana-metrics = "2.1.13"
solana-sdk = "2.1.13"
solana-transaction-status = "2.1.13"
spl-memo = "6.0.0"
thiserror = "2.0.11"
tokio = { version = "1", features = ["rt-multi-thread"] }
tonic = { version = "0.12", features = ["tls", "tls-roots", "tls-webpki-roots"] }
